5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4354/executions/1649_2704.log
== TEST (2019-04-05 20:04:50) 
-- CODE:
nota = float(input("nota do aluno: "))
bonificacao = input("recebe bonificacao? ")
bonificacao = bonificacao.lower
if(bonificacao == "s") :
	nota = nota + (nota * 0.1)
	print(nota)
else if (bonificacao == "n") :
 	print(nota) 
else :
	print("digite s ou n")
	  
-- ERROR:
File "XXXX", line 7
    else if (bonificacao == "n") :
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:05:57) 
-- CODE:
nota = float(input("nota do aluno: "))
bonificacao = input("recebe bonificacao? ")
bonificacao = bonificacao.lower
if(bonificacao == "s") :
	nota = nota + (nota * 0.1)
	print(nota)
else if(bonificacao == "n") :
 	print(nota) 
else :
	print("digite s ou n")
	  
-- ERROR:
File "XXXX", line 7
    else if(bonificacao == "n") :
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:06:21) 
-- CODE:
nota = float(input("nota do aluno: "))
bonificacao = input("recebe bonificacao? ")
bonificacao = bonificacao.lower
if(bonificacao == "s") :
	nota = nota + (nota * 0.1)
	print(nota)
else :
	print("digite s ou n")
	  
-- OUTPUT:
digite s ou n
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:06:55) 
-- CODE:
nota = float(input("nota do aluno: "))
bonificacao = input("recebe bonificacao? ")
bonificacao = bonificacao.lower
if(bonificacao == " s") :
	nota = nota + (nota * 0.1)
	print(nota)
else :
	print("digite s ou n")
	  
-- OUTPUT:
digite s ou n
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:07:41) 
-- CODE:
nota = float(input("nota do aluno: "))
bonificacao = input("recebe bonificacao? ")
bonificacao = bonificacao.lower()
if(bonificacao == "s") :
	nota = nota + (nota * 0.1)
	print(nota)
else :
	print("digite s ou n")
	  
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:08:10) 
-- CODE:
nota = float(input("nota do aluno: "))
bonificacao = input("recebe bonificacao? ")
bonificacao = bonificacao.lower()
if(bonificacao == "s") :
	nota = nota + (nota * 0.1)
	print(nota)
else :
	print("digite s ou n")
	  
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:08:10) 
-- CODE:
nota = float(input("nota do aluno: "))
bonificacao = input("recebe bonificacao? ")
bonificacao = bonificacao.lower()
if(bonificacao == "s") :
	nota = nota + (nota * 0.1)
	print(nota)
else :
	print("digite s ou n")
	  
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 20:08:36) 
-- CODE:
nota = float(input("nota do aluno: "))
bonificacao = input("recebe bonificacao? ")
bonificacao = bonificacao.lower()
if(bonificacao == "s") :
	nota = nota + (nota * 0.1)
	print(nota)
else :
	print("digite s ou n")
	  
-- EXECUTION TIME:
0.165905
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
digite s ou n
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:08:39) 
-- CODE:
nota = float(input("nota do aluno: "))
bonificacao = input("recebe bonificacao? ")
bonificacao = bonificacao.lower()
if(bonificacao == "s") :
	nota = nota + (nota * 0.1)
	print(nota)
else :
	print("digite s ou n")
	  
-- OUTPUT:
5.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-05 20:10:02) 
-- CODE:
nota = float(input("nota do aluno: "))
bonificacao = input("recebe bonificacao? ")
bonificacao = bonificacao.lower()
if(bonificacao == "s") :
	nota = nota + (nota * 0.1)
	print(nota)
if(bonificacao == "n") :
	print(nota)
else :
	print("digite s ou n")
	  
-- OUTPUT:
5.5
digite s ou n
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 20:10:13) 
-- CODE:
nota = float(input("nota do aluno: "))
bonificacao = input("recebe bonificacao? ")
bonificacao = bonificacao.lower()
if(bonificacao == "s") :
	nota = nota + (nota * 0.1)
	print(nota)
if(bonificacao == "n") :
	print(nota)
else :
	print("digite s ou n")
	  
-- EXECUTION TIME:
0.141625
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
digite s ou n
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
digite s ou n
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-05 20:10:39) 
-- CODE:
nota = float(input("nota do aluno: "))
bonificacao = input("recebe bonificacao? ")
bonificacao = bonificacao.lower()
if(bonificacao == "s") :
	nota = nota + (nota * 0.1)
	print(nota)
else :
	print(nota)
	  
-- EXECUTION TIME:
0.143147
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 01:00:19) 
-- CODE:
nota = float(input("nota do aluno: "))
bonificacao = input("recebe bonificacao? ")
bonificacao = bonificacao.lower()
if(bonificacao == "s") :
	nota = nota + (nota * 0.1)
	print(nota)
else :
	print(nota)
	  
-- EXECUTION TIME:
0.157041
-- TEST CASE 1:
---- input:
5.0
S
---- correct output:
5.5
---- user output:
5.5
-- TEST CASE 2:
---- input:
9.0
S
---- correct output:
9.9
---- user output:
9.9
-- TEST CASE 3:
---- input:
4.4
N
---- correct output:
4.4
---- user output:
4.4
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
